refactor(bump-version): use scripts to sync version in project configuration files